resources/sass/layout/_footer-v2.scss
@use "../theme/variables";
@use "../tools/mixins/breakpoints";
@use "../tools/mixins/font";

.footer-v2 {
    background-color: variables.$c-black;
    margin: 0 variables.$site-gutter * -1;
    color: variables.$c-white-2;

    @include breakpoints.breakpoint(mobile) {
        margin: 0 variables.$site-gutter-mobile * -1;
    }

    .v2footer__content-title {
        margin: 10px 0;
        color: variables.$c-white-2-fade;
    }

    a {
        text-decoration: none;
        color: unset;
    }
}

.v2footer__content {
    padding: variables.$footer-gutter-h variables.$footer-gutter-w;
    display: flex;
    justify-content: space-between;

    @include breakpoints.breakpoint(mobile) {
        @include font.font(12px, 14px);
        padding: variables.$footer-gutter-mobile;
        gap: 20px;
        flex-wrap: wrap;
        align-items: start;
    }
}

.v2footer__content-menu,
.v2footer__content-links,
.v2footer__content-contact,
.v2footer__content-signature {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 5px;
    flex: 1;
}

.v2footer__content-contact {
    @include breakpoints.breakpoint(mobile) {
        align-items: center;
    }
}

.v2footer__socials {
    display: flex;
    flex-direction: row;
    gap: 10px;

    @include breakpoints.breakpoint(mobile) {
        flex-direction: column;
        gap: 5px;

        img.footer__socials--icon-email {
            max-width: 30px;
            max-height: 30px;
        }

        img.footer__socials--icon-whatsapp {
            max-width: 27px;
            max-height: 27px;
        }
    }

    img {
        aspect-ratio: 1 / 1;
    }
}

.v2footer__content-signature {
    @include font.font(26px, 30px);
    max-width: 250px;

    @include breakpoints.breakpoint(mobile) {
        @include font.font(16px, 20px);
    }
}

.v2footer__credits {
    text-align: center;
    color: variables.$c-white-2-fade;
    @include font.font(14px, 18px);
    padding-bottom: calc(variables.$footer-gutter-h / 2);

    @include breakpoints.breakpoint(mobile) {
        padding-bottom: calc(variables.$footer-gutter-mobile / 2);
    }
}

